# spark-streaming-practicum

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml
demos/: duckdb.tape  setup.tape
diagrams/: architecture.excalidraw
src/: consumer.py
src/consumer/: __main__.py  batch_parsers.py  data_sinks.py  data_sources.py  session_builder.py  stream_processor.py  utilities.py
src/duckdb/: .duckdbrc
src/producer/: __main__.py  data_sinks.py  event_factory.py  generate_data.py  user_ids.txt
tests/consumer/: test_batch_parsers.py
