[project]
name = "streaming-practicum"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
consumer = [
    "pyspark>=4.1.1",
]
dev = [
    "boto3-stubs[essential]>=1.42.39",
]
producer = [
    "boto3>=1.42.39",
    "faker>=40.1.2",
    "python-dotenv>=1.2.1",
    "rich>=14.3.1",
    "structlog>=25.5.0",
]
