[project]
name = "streaming-practicum"
version = "0.1.0"
description = "Practice project to explore and implement streaming data ingestion patterns using Apache Spark Structured Streaming."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
consumer = [
    "pyspark>=3.5.0,<3.6.0",
    "python-dotenv>=1.2.1",
    "s3path>=0.6.5",
    "structlog>=25.5.0",
]
dev = [
    "boto3-stubs[essential]>=1.42.39",
]
producer = [
    "boto3>=1.42.39",
    "faker>=40.1.2",
    "python-dotenv>=1.2.1",
    "rich>=14.3.1",
    "s3path>=0.6.5",
    "structlog>=25.5.0",
]
